# apphub-tauri

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
