[package]
name = "app-hub"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-opener = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5" 
dirs = "5.0"
plist = "1"
icns = "0.3"
image = "0.24" 
base64 = "0.21"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
